# atlas

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.py
cmake/: FindTensorRT.cmake  glsl-shaders.cmake  wayland-gen-protocols.cmake  xxd-add-resources.cmake
configs/: conan.linux.x64.profile  conan.windows.x64.profile
src/: CMakeLists.txt
src/asm/: CMakeLists.txt  cpuid.s  decl.h  main.cpp  printf.s  stack-trace.s
src/chat-llama/: CMakeLists.txt  chat.sh
src/chat-llama/data/: .gitignore
src/cmake/: wayland-gen-client-protocol.cmake
src/core/: CMakeLists.txt
src/core/llama/: CMakeLists.txt  common.cpp  common.h  console.cpp  console.h  ggml-alloc.c  ggml-alloc.h  ggml.c  ggml.h  grammar-parser.cpp  grammar-parser.h  k_quants.c  k_quants.h  llama.cpp  llama.h  log.h  main.cpp
src/core/llama/res/: chat.sh
src/core/parser/: CMakeLists.txt  autocomplete.cpp
src/core/parser/res/: input.txt
src/core/test/: demo-drm.cpp  demo-https-server.cpp  demo-opencl.cpp  main.cpp
src/core/utils/: args.cpp  base.cpp  logging.h
src/cuda/: CMakeLists.txt  check-device.cu  common.cu  common.cuh  contrast-lg.cu  cufft-test.cu  device-query.cpp  dot-product.cu  fwd.h  global-variable.cu  hello-world.cu  julia-set.cu  main.cpp  nested-hello-world.cu  ray-tracing.cu  reduce-integer.cu  sum-matrix.cu  trt-mnist.cu  txi-gaussian.cu  txi-guided.cu
src/cuda-samples/: CMakeLists.txt  README.md  common.cu  common.cuh  dot_product.cu  fwd.h  hello_world.cu  julia_set.cu  main.cpp  nested_hello_world.cu  ray_tracing.cu  sum_matrix.cu  test_cufft.cu  test_tensorrt.cu  trt_mnist.cu  txi_gaussian.cu  txi_guided.cu
src/deep/: .gitignore  CMakeLists.txt  common.cpp  common.h  essay-writer.cpp  fashion-mnist.cpp  fwd.h  linear-regression.cpp  main.cpp  poem-generator.cpp  poem-writer.cpp  pyenv.sh  pyrightconfig.json
src/deep/models/: char-rnn.py  fashion-mnist.py  ffdnet.py
src/demo/: demo-https-client.cpp  demo-https-server.cpp
src/demo/data/: hello.cl
src/flapp/: pubspec.yaml
src/flapp/test/: widget_test.dart
src/flt/: pubspec.yaml
src/flt/lib/: main.dart
src/flt/linux/: CMakeLists.txt
src/flt/linux/runner/: my_application.cc
src/flt/test/: widget_test.dart
src/flutter/: .metadata
src/glview/: CMakeLists.txt  display-context.cpp  ime-editor.cpp  ime-editor.h  main.cpp  top-window.cpp  top-window.h  wayland-listeners.cpp  wayland-listeners.h
src/glviewer/: CMakeLists.txt  display-context.h  ime-editor.cpp  ime-editor.h  keycode-converter.cpp  keycode-converter.h  left-panel.cpp  left-panel.h  top-window.cpp  wayland-listeners.cpp  wayland-listeners.h
src/glviewer/data/: .gitignore
src/glviewer/data/ime/: cangjie5.dict.yaml  luna_pinyin.dict.yaml
src/hello_flutter/lib/: main.dart
src/helloqt/: CMakeLists.txt  app-window.cpp  app-window.h  main-window.cpp  main-window.h  main.cpp
src/helloqt/res/: app.qrc  run_helloqt.sh
src/ldd/: .gitignore  hello.c  load.sh  unload.sh
src/linux-drivers/: .clangd  Makefile  hello.c  load.sh  unload.sh
src/misc/: CMakeLists.txt  demo-crash.cpp  demo-ftxui.cpp  demo-https-client.cpp  demo-https-server.cpp  misc-asm.cpp  misc-crash.cpp  misc-gnuplot.cpp  misc-https-client.cpp  misc-https-server.cpp
src/net/: CMakeLists.txt  README.md
src/net/cli/: arp.cpp  dns.cpp  lsdev.cpp  mtu.cpp  ping.cpp  rarp.cpp  sniff.cpp  traceroute.cpp
src/net/cli/sniff/: capture-view.cpp  capture-view.h  context.cpp  context.h  homepage-view.cpp  homepage-view.h  log-view.cpp  log-view.h  main.cpp  text-view.cpp  text-view.h
src/net/protocol/: addr.cpp  addr.h  arp.cpp  arp.h  dns.cpp  dns.h  ethernet.cpp  ethernet.h  http.cpp  http.h  icmp.cpp  icmp.h  ipv4.cpp  ipv4.h  protocol.cpp  protocol.h  tcp.cpp  tcp.h  type.cpp  type.h  udp.cpp  udp.h
src/net/tools/: ping.cpp  traceroute.cpp
src/net/traffic/: adaptor.cpp  adaptor.h  packet.cpp  packet.h  port-table.h  transport.cpp  transport.h
src/net/transport/: adaptor.cpp  adaptor.h  packet.cpp  packet.h  port-table.cpp
src/ocl/: CMakeLists.txt  common.cpp  common.h  device-query.cpp  main.cpp  spatial-denoise.cpp  txi-guided.cpp
src/ocl/data/: spatial-denoise.cl  txi-guided.cl
src/parser/: CMakeLists.txt  main.cpp  pegtl.cpp  spirit.cpp
src/pypi/: .gitignore  FashionMNIST.py  U-Net.py  env.sh  requirements.txt
src/pypi/fashion-mnist/: main.py
src/pypi/ffdnet/: main.py
src/renju/: CMakeLists.txt  README.md  config.h  game.cpp  game.h  main.cpp  mcts.cpp  mcts.h  network.cpp  network.h  train.cpp  train.h
src/test/: CMakeLists.txt  concurrent-queue.cpp  demo-crash.cpp  demo-drm.cpp  demo-https-server.cpp  demo-opencl.cpp  https-client.cpp  https-server.cpp  main.cpp  ocl.cpp  test-database.cpp  thread-pool.cpp
src/tinywl/: CMakeLists.txt
src/tinywl/data/: env
src/toolkit/: CMakeLists.txt  args.cpp  args.h  base.cpp  base.h  encoding.cpp  encoding.h  error.cpp  error.h  format.h  fs.cpp  fs.h  logging.cpp  logging.h  sqlite-helper.cpp  sqlite-helper.h  timer.h  toolkit.cpp  toolkit.h  variant.cpp  variant.h  vulkan-helper.cpp  vulkan-helper.h
src/utils/: CMakeLists.txt  args.cpp  args.h  base.cpp  base.h  encoding.cpp  encoding.h  error.cpp  error.h  fs.cpp  fs.h  logging.cpp  logging.h  sqlite-helper.cpp  sqlite-helper.h  toolkit.cpp  toolkit.h
src/vk/: CMakeLists.txt  demo.cpp  scene.cpp  scene.h  vkcomp.cpp  vkwl.cpp  vkwl.h  vulkan-helper.cpp  vulkan-helper.h  wayland-helper.cpp  wayland-helper.h
src/vk/data/: mul2.glsl  square.glsl  vkwl.frag  vkwl.glsl  vkwl.vert
src/vkcomp/: CMakeLists.txt  main.cpp
src/vkcomp/data/: vkcomp.glsl
src/vkwl/: CMakeLists.txt  app.cpp  app.h  keycode.cpp  keycode.h  main.cpp  scene.cpp  scene.h
src/vkwl/data/: common.glsl  test.frag  test.vert  vkwl.frag  vkwl.vert
