list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

include(xxd-add-resources)
if(UNIX)
    include(wayland-gen-protocols)
    include(glsl-shaders)
endif()

include_directories(${CMAKE_CURRENT_LIST_DIR})

if(TC_CROSS_COMPILE)
    set(TC_USR_DIR ${TC_INSTALL_DIR})
else()
    set(TC_USR_DIR /usr)
endif()

add_subdirectory(thirdparty)
add_subdirectory(toolkit)
add_subdirectory(parser)
add_subdirectory(misc)
add_subdirectory(test)

if(UNIX)
    add_subdirectory(net)
    add_subdirectory(ocl)
    add_subdirectory(asm)
    if(NOT TC_CROSS_COMPILE)
        add_subdirectory(vkwl)
    endif()
endif()

if(NOT TC_CROSS_COMPILE)
    add_subdirectory(cuda)
    add_subdirectory(deep)
    add_subdirectory(renju)
endif()
